fix: fix tab margin on Safari, closes #653

--- a/packages/veui-theme-dls/components/tabs.less
+++ b/packages/veui-theme-dls/components/tabs.less
@@ -48,10 +48,8 @@
 
   .make-margin-left(@margin) {
     &-item {
-      margin-left: @margin;
-
-      &:first-child {
-        margin-left: 0;
+      & + & {
+        margin-left: @margin;
       }
     }
 
